--- a/src/styles/shop.css
+++ b/src/styles/shop.css
@@ -1,16 +1,40 @@
+@font-face {
+    font-family: "Rubik";
+    src: local('Rubik'), url(../fonts/Rubik-VariableFont_wght.ttf) format("truetype");
+}
+@font-face {
+    font-family: "Rubik Italic";
+    src: local('Rubik Italic'), url(../fonts/Rubik-Italic-VariableFont_wght.ttf) format("truetype");
+}
+
 .shop {
     height: 100%;
     width: 100vw;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
+    justify-content: center;
     gap: var(--gap);
     overflow: hidden;
-    padding: var(--gap)
+    font-family: "Rubik", sans-serif;
 }
 
 .shop h1 {
     align-self: center;
+    font-size: x-large;
+}
+
+.shop-section {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: var(--gap);
+}
+
+.shop-section h2 {
+    padding-left: var(--gap);
+    font-size: large;
 }
 
 .item-container {
@@ -21,7 +45,14 @@
     justify-content: flex-start;
     gap: var(--gap);
     overflow-x: auto;
-    padding: var(--gap)
+    padding: var(--gap);
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  
+}
+
+.item-container::-webkit-scrollbar {
+    display: none;
 }
 
 .shop-item {
