--- a/src/styles/shop.css
+++ b/src/styles/shop.css
@@ -56,6 +56,8 @@
 }
 
 .shop-item {
+    font-size: small;
+    text-align: center;
     border-radius: 15px;
     height: 190px;
     min-width: 130px;
@@ -90,4 +92,8 @@
 
 .price-amount::before {
     content: "$ ";
+}
+
+.shop-item h3 {
+    overflow-x: auto;
 }
