--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -7,6 +7,7 @@ nav {
     background-color: var(--secondary-color);
     color: white;
     border: 4px solid black;
+    font-family: "Rubik", sans-serif;
 }
 
 .nav-links {
