--- a/src/styles/shop.css
+++ b/src/styles/shop.css
@@ -1,15 +1,6 @@
-@font-face {
-    font-family: "Rubik";
-    src: local('Rubik'), url(../fonts/Rubik-VariableFont_wght.ttf) format("truetype");
-}
-@font-face {
-    font-family: "Rubik Italic";
-    src: local('Rubik Italic'), url(../fonts/Rubik-Italic-VariableFont_wght.ttf) format("truetype");
-}
-
 .shop {
     height: 100%;
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -20,7 +11,6 @@
 }
 
 .shop h1 {
-    align-self: center;
     font-size: x-large;
 }
 
@@ -59,8 +49,8 @@
     font-size: small;
     text-align: center;
     border-radius: 15px;
-    height: 190px;
-    min-width: 130px;
+    height: 200px;
+    min-width: 150px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -92,8 +82,4 @@
 
 .price-amount::before {
     content: "$ ";
-}
-
-.shop-item h3 {
-    overflow-x: auto;
 }
