--- a/src/styles/item.css
+++ b/src/styles/item.css
@@ -2,4 +2,51 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 100%;
+    width: 100%;
+}
+
+.image-container {
+    height: 40vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.image-container img {
+    height: 100%;
+    width: auto;
+    max-width: 300px;
+}
+
+.purchase {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: var(--gap);
+    border: 1px solid var(--primary-color);
+    padding: var(--gap) calc(var(--gap)*2);
+    border-radius: 100px;
+    width: 80vw;
+    background-color: var(--terciary-color);
+}
+
+.quantity {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid var(--secondary-color);
+    border-radius: 100px;
+}
+
+button {
+    border: none;
+    background-color: inherit;
+}
+
+.addToCart:active {
+    background-color: var(--primary-color);
+    color: white;
+    border-radius: 100px;
 }
