--- a/src/styles/item.css
+++ b/src/styles/item.css
@@ -2,8 +2,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
     height: 100%;
     width: 100%;
+    flex-grow: 1;
+    padding: var(--gap);
+    gap: var(--gap);
+    padding-bottom: 0;
 }
 
 .image-container {
@@ -18,6 +23,22 @@
     height: 100%;
     width: auto;
     max-width: 300px;
+}
+
+.item-details {
+    border-radius: calc(var(--gap)*4) calc(var(--gap)*4) 0 0;
+    flex-grow: 1;
+    width: 100%;
+    background-color: var(--complementary-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    padding: var(--gap);
+}
+
+.item-details .shop-item-price {
+    align-self: flex-start;
 }
 
 .purchase {
@@ -49,4 +70,18 @@ button {
     background-color: var(--primary-color);
     color: white;
     border-radius: 100px;
+}
+
+.top {
+    position: relative;
+}
+
+.back {
+    position: absolute;
+    align-self: flex-start;
+    top: 0;
+    left: 0;
+    height: fit-content;
+    border-radius: 50%;
+    padding: 0;
 }
