--- a/src/styles/item.css
+++ b/src/styles/item.css
@@ -59,6 +59,7 @@
     justify-content: center;
     border: 1px solid var(--secondary-color);
     border-radius: 100px;
+    min-width: 60px;
 }
 
 button {
