--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -14,7 +14,7 @@
     -o-background-size: 100% 100%;
     -webkit-background-size: 100% 100%;
     background-size:cover;
-
+    font-family: "Rubik", sans-serif;
 }
 
 .logo {
