--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -11,8 +11,12 @@ html, body {
 .App {
     display: flex;
     flex-direction: column;
-    gap: 12px;
     width: 100%;
     min-height: 100vh;
     justify-content: space-between;
+}
+
+main {
+    flex-grow: 1;
+    font-family: "Rubik", sans-serif;
 }
