--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -1,13 +1,9 @@
-.new-plant {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
 form {
     background-color: var(--complementary-color);
     padding: var(--gap);
     width: 80%;
+    border: 1px solid var(--primary-color);
+    border-radius: var(--gap);
 }
 
 fieldset {
@@ -28,4 +24,8 @@ fieldset {
     gap: var(--gap);
     grid-template-columns: 1fr 1fr;
     padding: var(--gap)
+}
+
+.submit {
+    align-self: flex-end;
 }
