--- a/src/styles/admin.css
+++ b/src/styles/admin.css
@@ -15,6 +15,9 @@
     width: fit-content;
     border-radius: var(--gap);
     background-color: var(--terciary-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .btn:active {
