--- a/src/styles/stock.css
+++ b/src/styles/stock.css
@@ -11,7 +11,7 @@
     flex-direction: column;
     border: 2px solid var(--terciary-color);
     padding: var(--gap);
-    max-width: 700px;
+    width: min(700px, 80%);
     border-radius: var(--gap);
 }
 
@@ -22,6 +22,19 @@
     padding-top: var(--gap);
     align-items: center;
     padding-bottom: var(--gap);
+}
+
+.stock-list-item.single {
+    display: flex;
+    justify-content: space-between;
+}
+
+.edit {
+    display: flex;
+    justify-content: flex-end;
+    padding: 0;
+    padding-right: var(--gap);
+    color: black;
 }
 
 .stock-list-item:nth-of-type(even){
@@ -35,4 +48,12 @@
 
 .add-new-plant {
     margin-top: var(--gap);
+}
+@media screen and (min-width: 600px) {
+    .edit {
+        display: none;
+    }
+    .stock-list-item.single:hover .edit {
+        display: flex;
+    }
 }
