--- a/src/styles/stock.css
+++ b/src/styles/stock.css
@@ -24,6 +24,11 @@
     padding-bottom: var(--gap);
 }
 
+.stock-list-item:not(:nth-of-type(1)) {
+    padding-left: var(--gap);
+
+}
+
 .stock-list-item.single {
     display: flex;
     justify-content: space-between;
