Added Back Button to Plant/Category lists

--- a/src/styles/stock.css
+++ b/src/styles/stock.css
@@ -6,6 +6,11 @@
     align-items: center;
 }
 
+.back.padded {
+    margin-top: var(--gap);
+    margin-left: var(--gap);
+}
+
 .stock-list {
     display: flex;
     flex-direction: column;
