Delete Icons added

--- a/src/styles/stock.css
+++ b/src/styles/stock.css
@@ -22,7 +22,7 @@
 
 .stock-list-item {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr .4fr;
+    grid-template-columns: 1fr 1fr 1fr .55fr;
     gap: var(--gap);
     padding-top: var(--gap);
     align-items: center;
@@ -37,6 +37,12 @@
 .stock-list-item.single {
     display: flex;
     justify-content: space-between;
+}
+
+.button-list{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
 }
 
 .edit {
